Fix #77: Added some basic AionMap interaction to the test
-this is now effectively complete, as we have enough testing of the simpler components that we can move forward with more complex tests
-that said, this will probably continue to evolve and exists as a convenient landing zone for other simple DApp idiom tests